--- a/src/templates/screens/reports/Step1.vm
+++ b/src/templates/screens/reports/Step1.vm
@@ -1,6 +1,6 @@
-#set ( $report = $scarabR.Report )
-#set ( $intakeReport = $intake.Report.mapTo($report) )
-#set ( $action = $link.setPage("reports,Step1.vm").setAction("GenerateReport").addPathInfo("nextTemplate", "reports,Step2.vm") )
+#set ($report = $scarabR.Report)
+#set ($intakeReport = $intake.Report.mapTo($report))
+#set ($action = $link.setPage("reports,Step1.vm").setAction("GenerateReport").addPathInfo("nextTemplate", "reports,Step2.vm").toString())
 <div class="app" id="div2-4-1-step1">
 <h2>Define report (2.4.1)</h2>
   <div class="tabs">
