--- a/src/templates/screens/reports/Step2b.vm
+++ b/src/templates/screens/reports/Step2b.vm
@@ -1,5 +1,5 @@
-#set ( $report = $scarabR.Report )
-#set ($action = $link.setPage("reports,Step2b.vm").setAction("GenerateReport"))
+#set ($report = $scarabR.Report)
+#set ($action = $link.setPage("reports,Step2b.vm").setAction("GenerateReport").toString())
 <div class="app" id="div2-4-1-step3">
 <h2>Define report (2.4.1)</h2>
   <div class="tabs">
@@ -34,7 +34,7 @@ column.</p>
 <table cellpadding="4" cellspacing="0" border="1">
  <tr>
   <td class="firstchild"><input type="submit" name="eventSubmit_doStep2baddgroup" value="Add group" />
-    &nbsp;
+    &#160;
     <input type="submit" name="eventSubmit_doStep2bdeletegroup"
         value="Delete group" />
 </td>
@@ -43,14 +43,14 @@ column.</p>
   </div>
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
  <tr>
-  <th nowrap="nowrap">&nbsp;</th>
+  <th nowrap="nowrap">&#160;</th>
   <th>Group number</th>
   <th>Group name</th>
  </tr>
 #set ($finalCount = 1)
 #foreach ( $optionGroup in $report.OptionGroups )
     #set ($intakeOptionGroup = $intake.OptionGroup.mapTo($optionGroup))
- #rows()
+ #indexedRows($velocityCount)
   <td><input type="checkbox"
                 name="$intakeOptionGroup.Selected.Key" /></td>
   <td>Group $velocityCount</td>
@@ -63,7 +63,7 @@ column.</p>
     #set ($intakeOptionGroup = $intake.OptionGroup.mapTo($optionGroup))
  ##indexedRows($finalCount)
 <tr>
-  <td>&nbsp;</td>
+  <td>&#160;</td>
   <td>Group $finalCount (new)</td>
     #if ($intakeOptionGroup.DisplayValue.isValid())
         ## don't show the last entered value
@@ -80,7 +80,7 @@ column.</p>
 <table cellpadding="4" cellspacing="0" border="1">
  <tr>
   <td class="firstchild"><input type="submit" name="eventSubmit_doStep2baddgroup" value="Add group" />
-    &nbsp;
+    &#160;
     <input type="submit" name="eventSubmit_doStep2bdeletegroup"
         value="Delete group" />
 </td>
@@ -97,7 +97,7 @@ column.</p>
  </tr>
     #foreach ( $attOption in $report.SelectedOptionsForGrouping )
         #set ($intakeOptionForGrouping = $intake.OptionForGrouping.mapTo($attOption))
-   #rows()
+   #indexedRows($velocityCount)
   <td>
             <select name="ofg$attOption.QueryKey">
         #foreach ( $optionGroup in $report.OptionGroups )
@@ -116,7 +116,7 @@ column.</p>
 <table cellpadding="4" cellspacing="0" border="1">
  <tr>
   <td class="firstchild"><input type="submit" value="Continue"  name="eventSubmit_doStep2b" />
-    &nbsp;
+    &#160;
     <input type="submit" value="Cancel"  name="eventSubmit_doCancel" />
 </td>
  </tr>
