--- a/src/templates/screens/reports/Step3_1a.vm
+++ b/src/templates/screens/reports/Step3_1a.vm
@@ -1,6 +1,6 @@
-#set ( $report = $scarabR.Report )
-#set ( $intakeReport = $intake.Report.mapTo($report) )
-#set ( $action = $link.setPage("reports,Step3_1a.vm").setAction("GenerateReport").addPathInfo("nextTemplate", "reports,Step3_1b.vm") )
+#set ($report = $scarabR.Report)
+#set ($intakeReport = $intake.Report.mapTo($report))
+#set ($action = $link.setPage("reports,Step3_1a.vm").setAction("GenerateReport").addPathInfo("nextTemplate", "reports,Step3_1b.vm").toString())
 <div class="app" id="div2-4-1-step4">
 <h2>Define report (2.4.1)</h2>
   <div class="tabs">
