--- a/src/templates/screens/Error.vm
+++ b/src/templates/screens/Error.vm
@@ -1,13 +1,31 @@
-<div class="app" id="error">
 $page.setTitle("Scarab Error")
+
+<div class="app" id="error">
+
 <h2>$page.Title</h2>
 #if( $data.getMessage() )
  Message: $data.getMessage()
 #else
- #if ( $stackTrace )
-  Stack Trace:
+ #if ($data.StackTrace)
+  <h3>Stack Trace</h3>
+
+<table width="30%">
+<tr>
+<td>
+If the stack trace below has at the top a mention of
+"ResourceNotFoundException", that means that a template could not be
+found (404) and is probably the result of a broken link. If the stack
+trace has something else, please send a copy of it to <a
+href="mailto:jon@latchkey.com?subject=StackTrace">Jon</a> for analysis.
+If you are a developer and think you know what the problem is, feel free
+to send in a patch to fix the problem. We would love your help and kiss
+your ass for 1000 days in appreciation.
+</td>
+</tr>
+</table>
+
   <pre>
-  $stackTrace
+  $data.StackTrace
   </pre>
  #else
   <p>
