--- a/src/templates/screens/Error.vm
+++ b/src/templates/screens/Error.vm
@@ -16,7 +16,7 @@ If the stack trace below has at the top a mention of
 "ResourceNotFoundException", that means that a template could not be
 found (404) and is probably the result of a broken link. If the stack
 trace has something else, please send a copy of it to <a
-href="mailto:jon@latchkey.com?subject=StackTrace">Jon</a> for analysis.
+href="mailto:jon@latchkey.com?subject=Scarab%20StackTrace">Jon</a> for analysis.
 If you are a developer and think you know what the problem is, feel free
 to send in a patch to fix the problem. We would love your help and kiss
 your ass for 1000 days in appreciation.
