--- a/src/templates/screens/AdvancedQuery.vm
+++ b/src/templates/screens/AdvancedQuery.vm
@@ -4,7 +4,7 @@ $page.setTitle("Advanced query")
 <h2>$page.Title</h2>
 
 <form action="$link.setPage("AdvancedQuery.vm")" method="post">
-<input type="hidden" name="nextTemplate" value="IssueList.vm" />
+<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="IssueList.vm" />
 <input type="hidden" name="action" value="Search" />
 <input type="hidden" name="searchType" value="advanced" />
 <input type="hidden" name="pageNum" value="1" />
