--- a/src/templates/screens/MoveIssue2.vm
+++ b/src/templates/screens/MoveIssue2.vm
@@ -21,7 +21,7 @@ $page.setTitle("Copy/move issue")
 <div class="app" id="moveissue2">
 <h2>$page.Title</h2>
 
-#set ($action = $link.setPage("MoveIssue2.vm").setAction("MoveIssue").addPathInfo("nextTemplate", "Links.vm").toString())
+#set ($action = $link.setPage("MoveIssue2.vm").setAction("MoveIssue").addPathInfo("$scarabG.Constant.NEXT_TEMPLATE", "Links.vm").toString())
 #set ($issueId = $data.Parameters.getString("issue_id"))
 #set ($issue = $scarabR.getIssue($issueId))
 #set ($moduleId = $data.Parameters.getString("module_id"))
