--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -1,6 +1,6 @@
 $page.setTitle("Issue template")
 
-#set ($action = $link.setPage("SaveTemplate.vm").setAction("TemplateList").addPathInfo("nextTemplate", "TemplateList.vm").toString())
+#set ($action = $link.setPage("SaveTemplate.vm").setAction("TemplateList").addPathInfo("$scarabG.Constant.NEXT_TEMPLATE", "TemplateList.vm").toString())
 #set ($module = $scarabR.CurrentModule)
 #set ($issueId = $data.Parameters.getString("issue_id"))
 #if ($issueId)
