--- a/src/templates/screens/reports/Step3_2a.vm
+++ b/src/templates/screens/reports/Step3_2a.vm
@@ -1,6 +1,6 @@
 #set ($report = $scarabR.Report)
 #set ($intakeReport = $intake.Report.mapTo($report))
-#set ($action = $link.setPage("reports,Step3_2a.vm").setAction("GenerateReport").addPathInfo("nextTemplate", "reports,Step3_2b.vm").toString())
+#set ($action = $link.setPage("reports,Step3_2a.vm").setAction("GenerateReport").addPathInfo("$scarabG.Constant.NEXT_TEMPLATE", "reports,Step3_2b.vm").toString())
 <div class="app" id="div2-4-1-step4b">
 <h2>Define report (2.4.1)</h2>
   <div class="tabs">
